fix z-index application for header navigation

--- a/sites/all/themes/the_ark/sass/components/_button-navigation.scss
+++ b/sites/all/themes/the_ark/sass/components/_button-navigation.scss
@@ -6,7 +6,6 @@
 
   display: block;
   float: left;
-  z-index: 10;
   overflow: hidden;
   border: {
     right: 1px solid $gray-light;
