--- a/sites/all/themes/the_ark/sass/components/_region-header.scss
+++ b/sites/all/themes/the_ark/sass/components/_region-header.scss
@@ -15,6 +15,7 @@
 .l-regionwrapper--header {
   @include transition(top $transition-duration-extended ease-in);
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
   &.headroom--unpinned {
